# pycompool

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  compoolctl  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: protocol-program.txt  protocol.txt  reference.md
src/pycompool/: __init__.py  cli.py  commands.py  connection.py  controller.py  monitor.py  protocol.py
tests/: __init__.py  test_cli.py  test_commands.py  test_connection.py  test_controller.py  test_monitor.py  test_protocol.py
