[project]
name = "pycompool"
version = "0.1.0"
description = "Control Pentair/Compool LX3xxx pool and spa systems via RS-485"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.0",
    "pyserial>=3.5",
    "serial>=0.0.97",
]

[project.scripts]
compoolctl = "compoolctl:main"
